Lidt html på basket

--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Order</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../public/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
+<header>
+    <a href="index.html" th:href="@{/}">
+        <img alt="logo" src="../public/images/logo.png" th:src="@{/images/logo.png}"/>
+    </a>
+    <a>
+        <img alt="logo" src="../public/images/cupcakelogo.png" th:src="@{/images/cupcakelogo.png}"/>
+    </a>
+</header>
+
+<p>Ordrer</p>
+<p>Kunder</p>
+<!--<p><span th:text="${session.currentUser.mail}"></span></p>-->
+<img alt="basketLogo" src="../public/images/basketIcon.png" th:src="@{/images/basketIcon.png}"/>
+
 
 </body>
-</html>
