--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Order</title>
+    <title>Basket</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../public/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet"/>
@@ -9,9 +9,6 @@
 <body>
 <header>
     <a href="index.html" th:href="@{/}">
-        <img alt="logo" src="../public/images/logo.png" th:src="@{/images/logo.png}"/>
-    </a>
-    <a>
         <img alt="logo" src="../public/images/cupcakelogo.png" th:src="@{/images/cupcakelogo.png}"/>
     </a>
 </header>
@@ -21,5 +18,26 @@
 <!--<p><span th:text="${session.currentUser.mail}"></span></p>-->
 <img alt="basketLogo" src="../public/images/basketIcon.png" th:src="@{/images/basketIcon.png}"/>
 
+<div class="basket">
+<div th:if="${paymentStatus == false}">
+    <div id="order-list">
+        <ul>
+            <li th:each="order : ${orders}">
+                <span th:text="${order.quantity} + 'x ' + ${order.bottom} + ' & ' + ${order.topping}"></span>
+                <span>$<span th:text="${order.totalPrice}"></span></span>
+            </li>
+        </ul>
+    </div>
+    <div class="total">
+        Total: <span th:text="${totalPrice}">0.00</span> kr
+    </div>
+        <button type="submit">Betal nu</button>
+    </div>
 
+    <div th:if="@{paymentStatus == true}">
+        <p>Tak for din order!</p>
+        <p>Dine ordre er betalt og registreret</p>
+        <p>Du kan nu hente din ordre i vores butik</p>
+    </div>
+</div>
 </body>
