added functioning login, and controllers/mappers. index and login inputfields and error messages work.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Index</title>
 </head>
 <body>
-
+<p><a href="login.html" th:href="@{/login}">Login</a></p>
+<p th:text="${message}"></p>
 </body>
 </html>
