I order når man vælger, så laver den en instance a orderdetails

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -21,7 +21,7 @@
 <h1>Velkommen ombord</h1>
 <h2>Øens bedste cupcakes. Vælg og bestil her:</h2>
 
-<form action="order.html">
+<form action="/order" method="POST">
     <div class="webform medium-padding">
         <select name="bottom">
             <option value="" selected disabled>Vælg bund</option>
