--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -11,11 +11,11 @@
 <form method="post">
 
     <input type="text" name="mail" placeholder="Enter your mail">
-    <input type="text" name="password" placeholder="Enter you password" autocomplete="off">
-    <input type="text" name="password" placeholder="Enter you password again" autocomplete="off">
+    <input type="text" name="password1" placeholder="Enter you password" autocomplete="off">
+    <input type="text" name="password2" placeholder="Enter you password again" autocomplete="off">
 
     <button type="submit" formaction="/createuser">Create account</button>
-    <div><p th:text="${message}"></p></div>
+    <div class="error"><p th:text="${message}"></p></div>
 
 </form>
 
