final touchup before push to master.

--- a/src/main/resources/templates/createuser.html
+++ b/src/main/resources/templates/createuser.html
@@ -15,7 +15,7 @@
     <input type="text" name="password2" placeholder="Enter you password again" autocomplete="off">
 
     <button type="submit" formaction="/createuser">Create account</button>
-    <div class="error"><p th:text="${message}"></p></div>
+    <div><p th:text="${message}"></p></div>
 
 </form>
 
