profile link added to index when current user is logget in. basic profile.html is added with input fields and edit button. Code for editing password and mail is not yet added.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,15 @@
     <title>Index</title>
 </head>
 <body>
+
 <p><a href="login.html" th:href="@{/login}">Login</a></p>
+
 <p th:text="${message}"></p>
 
 <div th:if="${session.currentUser != null}">
     <span th:text="${session.currentUser.mail}"></span> |
     <a href="login.html" th:href="@{/logout}">Logout</a>
+    <a href="profile.html" th:href="@{/profile}">Profile</a>
 </div>
 
 </body>
