Can now remove X item from basket

--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -24,6 +24,13 @@
             <li th:each="order : ${orders}">
                 <span th:text="${order.quantity} + 'x ' + ${bottomNames[order.botID]} + ' & ' + ${toppingNames[order.topID]}"></span>
                 <span> - <span th:text="${order.totalPrice}"></span> kr</span>
+
+                <!-- Remove button -->
+                <form action="/basket/remove" method="POST" style="display:inline;">
+                    <input type="hidden" name="botID" th:value="${order.botID}">
+                    <input type="hidden" name="topID" th:value="${order.topID}">
+                    <button type="submit">X</button>
+                </form>
             </li>
         </ul>
     </div>
