--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,5 +13,9 @@
     <a href="login.html" th:href="@{/logout}">Logout</a>
 </div>
 
+<form action="/order" method="GET">
+    <button type="submit">Bestil her</button>
+</form>
+
 </body>
 </html>
