--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,14 +19,14 @@
         <tr>
             <td>Mail:</td>
             <td th:text="${session.currentUser.mail}"></td>
-            <td><input type="text" name="mail" placeholder="New mail address here"></td>
-            <td><button type="submit" name="profileinfo" th:value="${session.currentUser.mail}" formaction="editinfo">Edit</button></td>
+            <td><input type="text" name="mail" placeholder="New mail address here" ></td>
+            <td><button type="submit" name="profileinfo" th:value="${session.currentUser.mail}" formaction="updateInfo">Edit</button></td>
         </tr>
         <tr>
             <td>Password:</td>
             <td th:text="${session.currentUser.password}"></td>
             <td><input type="text" name="password" placeholder="New password here"></td>
-            <td><button type="submit" name="profileinfo" th:value="${session.currentUser.password}" formaction="editinfo">Edit</button></td>
+            <td><button type="submit" name="profileinfo" th:value="${session.currentUser.password}" formaction="">Edit</button></td>
         </tr>
     </table>
 
