--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -11,14 +11,21 @@
     <a href="index.html" th:href="@{/}">
         <img alt="logo" src="../public/images/cupcakelogo.png" th:src="@{/images/cupcakelogo.png}"/>
     </a>
-</header>
 
+</header>
+<div class="user-info">
+    <span th:text="${session.currentUser.mail}"></span>
+    <a href="basket.html" class="basket-icon">
+        <img alt="basket-logo" src="../public/images/basketIcon.png" th:src="${/images/basketIcon.png}"/>
+    </a>
+</div>
+<div class="container">
 <h1>Velkommen ombord</h1>
 <h2>Øens bedste cupcakes. Vælg og bestil her:</h2>
 
 <form action="/order" method="POST">
-    <div class="webform medium-padding">
-        <select name="bottom">
+    <div class="form-group">
+        <select name="bottom" required>
             <option value="" selected disabled>Vælg bund</option>
             <option value="Chocolate">Chokolade  |  5.00 kr</option>
             <option value="Vanilla">Vanilje  |  5.00 kr</option>
@@ -26,8 +33,10 @@
             <option value="Pistacio">Pistacie  |  6.00 kr</option>
             <option value="Almond">Mandel  |  7.00 kr</option>
         </select>
+    </div>
 
-        <select name="topping">
+    <div class="form-group">
+        <select name="topping" required>
             <option value="" selected disabled>Vælg topping</option>
             <option value="Chocolate">Chokolade  |  5.00 kr</option>
             <option value="Blueberry">Blåbær  |  5.00 kr</option>
@@ -39,18 +48,20 @@
             <option value="Lemon">Citron  |  8.00 kr</option>
             <option value="Blue cheese">Blue cheese  |  9.00 kr</option>
         </select>
+        </div>
 
+    <div class="quantity-box">
         <input type="number" id="quantity" name="quantity" min="1" placeholder="Vælg antal">
-
-        <button type="submit">Læg i kurv</button>
     </div>
+
+        <button type="submit" class="add-to-cart">Læg i kurv</button>
 </form>
 
 <!-- Button to go to Basket -->
 <form action="/basket" method="GET">
     <button type="submit">Gå til kurv</button>
 </form>
-
+</div>
 </body>
 </html>
 
