begyndt på at style order.html. Ikke helt færdig

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -16,7 +16,7 @@
 <div class="user-info">
     <span th:text="${session.currentUser.mail}"></span>
     <a href="basket.html" class="basket-icon">
-        <img alt="basket-logo" src="../public/images/basketIcon.png" th:src="${/images/basketIcon.png}"/>
+        <img alt="basket-logo" src="../public/images/basketIcon.png" th:src="@{/images/basketIcon.png}"/>
     </a>
 </div>
 <div class="container">
