--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <a href="login.html" th:href="@{/logout}">Logout</a>
 </div>
 
-<form action="/order" method="GET">
+<form th:action="${session.currentUser != null} ? '/order' : '/login'" method="GET">
     <button type="submit">Bestil her</button>
 </form>
 
