general index and styling (wip) - Showing current mail does not function properly when using link to go back.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,8 +5,8 @@
     <title>ADMIN AREA</title>
 </head>
 <body>
-<h1>ADMIN AREA</h1>
-    <table border="1">
+<h1>ADMIN PANEL</h1>
+    <table border="1" class="admin">
         <thead>
         <tr>
             <th>Email</th>
