--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -10,17 +10,19 @@ body {
 /****** Header ******/
 .generic-style {
     background-color: #3A1561;
-    top: 0;
-    margin: auto;
-    width: 1400px;
-    height: 20%;
+    width: 75vw;
+    height: 15vh;
     min-height: 100px;
+    min-width: 20%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 15px 15px 0 0;
+    margin: 50px auto auto;
 }
 
 .generic-style img  {
     width: auto;
-    height: auto;
+    height: 15vh;
+    min-height: 100px;
     display: block;
     margin: auto;
 }
@@ -31,10 +33,11 @@ ul {
     list-style-type: none;
     margin: auto;
     padding: 0;
-    width: 1400px;
+    width: 75vw;
     overflow: hidden;
     background-color: #333;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    min-width: 20%;
 }
 
 li {
@@ -51,24 +54,57 @@ li a {
 
 li a:hover:not(.active) {
     background-color: #111;
+    transition: background-color 0.3s;
 }
 
 .active {
-    background-color: #04AA6D;
+    background-color: #663399;
+    transition: background-color 0.3s;
 }
 
-.login {
-    background-color: #3A1561;
+.active:hover {
+    background-color: #8253B1;
 }
+
+/* Dropdown */
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 
 /* Page Container */
 .container {
     background: white;
-    width: 1400px;
+    width: 75vw;
     margin: auto;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    min-width: 20%;
 }
 
 /* Text styles */
@@ -135,6 +171,12 @@ button {
 
 button:hover {
     opacity: 0.8;
+}
+
+/***** Admin Area *****/
+.admin {
+    background-color: #333333;
+    color: white;
 }
 
 
