--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,24 +20,14 @@
     </li>
 
 
-    <li class="dropdown">
-        <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
-        <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-        </div>
-    </li>
-
-
     <li style="float:right"><a href="login.html" th:href="@{/login}" class="active">Login</a></li>
-    <li style="float:right" ><a class="active" href="admin.html">Admin</a></li>
 
-    <li style="float:right" class="dropdown">
-        <a th:text="${session.currentUser.mail}" class="dropbtn"></a>
-        <div class="dropdown-content" th:if="${session.currentUser != null}">
+    <li style="float:right" class="dropdown" th:if="${session.currentUser != null}">
+        <a th:text="${session.currentUser}" class="dropbtn"></a>
+        <div class="dropdown-content">
             <a href="login.html" th:href="@{/logout}">Logout</a>
             <a href="profile.html" th:href="@{/profile}">Profile</a>
+            <a class="active" href="admin.html">Admin</a>
         </div>
     </li>
 </ul>
