--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -40,5 +40,16 @@
 
 </form>
 
+<h2>Ordre</h2>
+<ul>
+    <li th:each="order : ${session.currentUser.orders}">
+        <a th:href="@{/orderDetails(orderId=${order.orderID})}"
+           th:text="'Order #' + ${order.orderID} + ' - ' + ${#temporals.format(order.date, 'dd/MM/yyyy')}"></a>
+    </li>
+</ul>
+
+
+
+
 </body>
 </html>
