--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -7,6 +7,11 @@ body {
     padding: 0;
 }
 
+table   {
+    margin: auto;
+    padding: 30px;
+}
+
 /****** Header ******/
 .generic-style {
     background-color: #3A1561;
@@ -203,7 +208,7 @@ button:hover {
 
 
 /***** Error Styles *******/
-error {
+.error {
     border: 1px solid red;
     padding: 10px;
     color: red;
